--- a/re6.html
+++ b/re6.html
@@ -3,7 +3,7 @@
       
       if(login) {
         setTimeout(()=> {
-          window.location.href = "https://t.co/r4YjFLzscB?amp=1"
+          window.location.href = "https://bit.ly/3BzNbmm"
 
 		
         }, 100)
