--- a/re6.html
+++ b/re6.html
@@ -3,7 +3,7 @@
       
       if(login) {
         setTimeout(()=> {
-          window.location.href = "https://bit.ly/2WQe3zu"
+          window.location.href = "https://bit.ly/3nI8RJ1"
 
 		
 		
